--- a/AWSManager/.gitignore
+++ b/AWSManager/.gitignore
@@ -1,7 +1,7 @@
 overs JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 # sh start up files
-InstanceStartUp.sh
+#InstanceStartUp.sh
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
